# FlashCards

./: .gitignore  CODE_OF_CONDUCT.md  FlashCards.doap  README.md  io.github.fkinoshita.FlashCards.json  meson.build
.github/workflows/: flatpak.yml
data/: about_dialog.ui.in  io.github.fkinoshita.FlashCards.desktop.in  io.github.fkinoshita.FlashCards.desktop.in.in  io.github.fkinoshita.FlashCards.gschema.xml  io.github.fkinoshita.FlashCards.metainfo.xml.in.in  meson.build  resources.gresource.xml  style.css
data/icons/: meson.build
data/ui/: card_edit_view.blp  card_edit_view.ui  card_row.blp  card_view.blp  deck_row.blp  deck_view.blp  decks.ui  list_view.blp  welcome.blp  window.blp
po/: POTFILES  POTFILES.in  flashcards.pot  meson.build
src/: application.py  card_edit_page.py  card_edit_page.ui  card_edit_view.py  card_row.py  card_view.py  const.py.in  deck_row.py  deck_view.py  decks.py  decks.ui  flashcards-application.c  flashcards-application.h  flashcards-decks.c  flashcards-decks.h  flashcards-decks.ui  flashcards-welcome.c  flashcards-welcome.h  flashcards-welcome.ui  flashcards-window.c  flashcards-window.h  flashcards-window.ui  flashcards.gresource.xml  flashcards.in  list_view.py  main.c  main.py  meson.build  shared.py  style.css  welcome.py  welcome.ui  window.py  window.ui
